--- a/productos.html
+++ b/productos.html
@@ -16,7 +16,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="promociones.html">Promociones</a></li>  <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
